[package]
name = "faasm-sys"
description = "Rust bindings for Faasm."
authors = ["Mayeul Fournial <mfournial@outlook.com>"]
readme = "README.md"
repository = "https://github.com/mfournial/faasm-sys"
version = "0.0.12" # in sync with Faasm
build = "build.rs"
edition = "2021"
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[[example]]
name = "hello_world"

[dependencies]

[build-dependencies]
cc = "1"
#cmake = "0.1"

[package.metadata.docs.rs]
targets = [] # Do not build docs since this is a sys crate
